[gd_scene load_steps=4 format=3 uid="uid://csviawr0y6nt8"]

[ext_resource type="PackedScene" uid="uid://cjm1hn3yvx3q3" path="res://Juca.glb" id="1_phxqf"]
[ext_resource type="Script" uid="uid://ccofadw2hmn15" path="res://juca.gd" id="2_qs0l4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qs0l4"]

[node name="Juca" instance=ExtResource("1_phxqf")]
script = ExtResource("2_qs0l4")

[node name="Label3D" type="Label3D" parent="." index="0"]
transform = Transform3D(1, 0, 2.1175824e-22, 0, 1, 0, 0, 0, 0.9999998, 0, 3.3065114, 0)
billboard = 2
outline_render_priority = -2
text = "Player"

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/position = Vector3(0, -0.35379973, 0)
bones/1/rotation = Quaternion(3.6164838e-09, -2.3878918e-18, 0.008782751, 0.9999615)
bones/2/rotation = Quaternion(-5.3816973e-09, -1.2421655e-15, -0.013072211, 0.99991465)
bones/3/rotation = Quaternion(-0.81005454, -0.16022816, 0.49502105, 0.27035686)
bones/4/rotation = Quaternion(-0.41728115, -1.6074625e-06, -0.7565671, 0.5034704)
bones/6/rotation = Quaternion(-0.49502122, 0.27035713, 0.8100543, -0.16022812)
bones/7/rotation = Quaternion(-0.4172815, 1.4305117e-06, 0.7565673, 0.50347024)
bones/9/position = Vector3(0, -0.34980762, 0)
bones/9/rotation = Quaternion(0.7054018, -0.04907479, 0.7054018, -0.049074784)
bones/10/rotation = Quaternion(0.0849905, -0.035597272, -0.25848776, 0.9616099)
bones/11/rotation = Quaternion(0.14355269, 9.900285e-05, 0.54958224, 0.82301396)
bones/12/rotation = Quaternion(0.48920953, 0.8622393, -0.020092336, -0.12966739)
bones/13/rotation = Quaternion(0.11830039, -0.00010627786, -0.45290548, 0.88367504)
bones/14/position = Vector3(0.9538253, -4.137715, -1.0623801)
bones/14/rotation = Quaternion(-0.35483932, 0.60087967, -0.33748937, 0.63177025)
bones/15/position = Vector3(3.1551346e-05, -2.3950033e-06, 2.5398454e-06)
bones/15/rotation = Quaternion(-1.7879483e-07, -5.842675e-11, 1, -9.400694e-10)
bones/16/position = Vector3(0.7679889, -3.03669, 1.0047063)
bones/17/position = Vector3(1.2192111, -0.15232724, 0.69396794)
bones/18/position = Vector3(1.6400877, -1.2689629, 1.0989246)
bones/19/position = Vector3(-0.67622393, -4.4044147, 0.49004495)
bones/19/rotation = Quaternion(-0.5194795, -0.4804591, 0.49407947, 0.505159)
bones/20/position = Vector3(-6.787851e-05, 1.9408519e-05, 1.4334012e-05)
bones/20/rotation = Quaternion(1.7676857e-07, -2.3373103e-10, 1, 2.2346163e-09)
bones/21/position = Vector3(-0.7679889, -3.03669, 1.0047063)
bones/21/rotation = Quaternion(-0.37711683, 0.59814954, 0.59814954, -0.3771169)
bones/22/position = Vector3(-1.2192111, -0.15232724, 0.69396794)
bones/23/position = Vector3(-1.6400877, -1.2689629, 1.0989246)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="0"]
transform = Transform3D(-1.512919e-11, 3.530598e-09, -1.0000002, -0.008579336, 0.9999632, 3.530598e-09, 0.99996316, 0.008579332, 1.5161504e-11, -5.0628843e-09, 0.689163, -0.012295382)
bone_name = "Bone.003"
bone_idx = 2

[node name="Plane_001" parent="Armature/Skeleton3D" index="3"]
surface_material_override/0 = SubResource("StandardMaterial3D_qs0l4")

[node name="Camera3D2" type="Camera3D" parent="." index="3" groups=["camera"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.1470258, 1.8613307)
current = true

[node name="Camera3D" type="Camera3D" parent="." index="4" groups=["camera"]]
transform = Transform3D(0.28016412, -0.20043738, 0.93879336, 0, 0.9779585, 0.20879936, -0.9599521, -0.05849809, 0.2739889, 2.323255, 2.3036616, 2.2678664)

[node name="Timer" type="Timer" parent="." index="5"]
wait_time = 5.0
autostart = true

[node name="Camera3D3" type="Camera3D" parent="." index="6" groups=["camera"]]
transform = Transform3D(-0.9689123, 1.4437916e-08, -0.24740481, -0.20968981, 0.5307035, 0.8212089, 0.13129862, 0.84755754, -0.5142051, 0, 3.5568104, -1.2707173)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
